<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:orientation="vertical"
              android:paddingTop="@dimen/abc_dialog_padding_top_material"
              tools:context="com.framgia.youralarm1.activity.AlertAlarmActivity">

    <TextView
        android:id="@+id/text_alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/alert_title"
        android:textColor="@color/color_text_item_alarm"
        android:textSize="@dimen/abc_text_size_display_1_material"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/abc_action_bar_default_height_material"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_time_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="bottom"
            android:text="@string/time_alarm_sample"
            android:textColor="@color/color_text_item_alarm"
            android:textSize="@dimen/abc_text_size_display_3_material"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_slide_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_15"
                android:text="@string/snooze_title"
                android:textColor="@color/color_text_item_alarm"
                android:textSize="@dimen/abc_text_size_medium_material"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_15"
                android:text="@string/dismiss_title"
                android:textColor="@color/color_text_item_alarm"
                android:textSize="@dimen/abc_text_size_medium_material"/>

        </RelativeLayout>

        <com.framgia.youralarm1.widget.SlideButton
            android:id="@+id/slidebutton_alarm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:layout_centerInParent="true"
            app:slide_buttonColor="@color/color_button_slide"
            app:slide_buttonSelectedColor="@color/color_button_slide_selected"/>

    </RelativeLayout>

</LinearLayout>